--- a/app/templates/components/article-tile.hbs
+++ b/app/templates/components/article-tile.hbs
@@ -1,4 +1,5 @@
 <li>{{article.author}} {{article.image}} {{article.title}}
 <p><img src={{article.image}} alt={{article.title}} ></p>
 <button {{action 'delete' article}}>Delete Article</button>
+{{update-article article=article update="update"}}
 </li>
