--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -3,7 +3,8 @@ header {
   ul {
     list-style: none;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    
   }
   li{
     align-self: center;
