--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -5,7 +5,7 @@
 <ul>
   {{#each model as |article|}}
   <li>{{article.author}} {{article.image}} {{article.title}}
-  <p><img src={{article.image}} alt={{article.title}} ></p>
+  <p>{{#link-to 'article' article.id}}<img src={{article.image}} alt={{article.title}}>{{/link-to}}</p>
   </li>
   {{/each}}
 </ul>
